examples/test/testpolicy16254.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy16254
  namespace: namespace262
spec:
  podSelector:
    matchLabels:
      key44: value39
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key11: value25
          key20: value16
          key48: value1
      podSelector:
        matchLabels:
          key24: value10
          key10: value47
